# ESAA-claude

./: package.json  plugin.json  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
commands/: esaa-init.md  esaa-run.md  esaa-verify.md
esaa/: __init__.py  __main__.py  cli.py  constants.py  mcp_server.py
esaa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
esaa/core/: __init__.py  boundaries.py  canonical.py  event_store.py  projection.py  state_machine.py  validation.py  verification.py
esaa/schemas/: __init__.py  agent_result.schema.json  issues.schema.json  lessons.schema.json  roadmap.schema.json
esaa/templates/: AGENT_CONTRACT.yaml  ORCHESTRATOR_CONTRACT.yaml  PROJECTION_SPEC.md  RUNTIME_POLICY.yaml  STORAGE_POLICY.yaml  __init__.py  agents_swarm.yaml
hooks/: hooks.json
hooks/scripts/: boundary-check.sh  verify-projection.sh
mcp/: .mcp.json
skills/esaa-impl/: SKILL.md
skills/esaa-impl-hotfix/: SKILL.md
skills/esaa-orchestrator/: SKILL.md
skills/esaa-qa/: SKILL.md
skills/esaa-spec/: SKILL.md
